# sik-llm-eval

./: .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  eval_template.yaml  example_eval.yaml  example_sweep.yaml  example_test.yaml  pyproject.toml  requirements.txt  sandbox.ipynb  setup.cfg  temp.ipynb
.github/workflows/: tests.yaml
candidates/: meta-llama-2-7b-chat-hf-nvidia-1x-a10g.yaml
conda.recipe/: build.sh  meta.yaml  meta.yml
evals/: eval_fibonacci.yaml  mask_emails.yaml
evals/candidates/: meta-llama-2-7b-chat-hf-nvidia-1x-a10g.yaml
evals/evals/: eval_fibonacci.yaml  mask_emails.yaml
evals/templates/: candidate_hugging_face_endpoint_mistral_a10g.yaml  candidate_hugging_face_endpoints.yaml  candidate_openai.yaml  candidate_openai_4.0_1106.yaml
examples/: 1_Simple_Example_with_EvalHarness.ipynb  1_Simple_Example_with_TestHarness.ipynb  2_Creating_Evals_and_Candidates.ipynb  3_Creating_Multi-Eval_and_Multi-Candidate_dicts_yamls.ipynb  3_Creating_Multi-Eval_yamls.ipynb  3_callable_checks_and_candidates.ipynb  4_callable_checks_and_candidates.ipynb  4_rag_evals.ipynb  Getting-Started-with-Evals.ipynb  eval_fibonacci.yaml  eval_result_example.yaml  eval_template.yaml  example.ipynb  example_script.py  rag_evals_via_nvidia_chatrag_bench.py  run_template.yaml  sandbox.ipynb  sweep_template.yaml  utils.py
examples/archive/: eval_template.yaml  mask_emails__meta-llama-2-7b-etc.yaml  run_template.yaml  sweep_template.yaml
examples/candidates/: anthropic_sonnet.yaml  anthropic_tools_sonnet.yaml  hugging_face_endpoint_mistral_a10g.yaml  openai_3.5.yaml  openai_3.5_1106.yaml  openai_3.5_1106_multiple_parameters.yaml  openai_3.5_1106_multiple_system_prompts.yaml  openai_4.0.yaml  openai_4.0_1106.yaml  openai_4.0_1106_multiple_system_prompts.yaml  openai_4.1.yaml  openai_4o-mini.yaml  openai_server.yaml  openai_tools_3.5.yaml  openai_tools_4o-mini.yaml
examples/evals/: eval_fibonacci.yaml  mask_emails.yaml  mask_emails_assertions.yaml  simple_example.yaml
examples/nvidia_chatrag_bench/: source.py
llm_eval/: anthropic.py  bedrock.py  candidates.py  checks.py  eval.py  filtering.py  internal_utilities.py  mistralai.py  openai.py  utilities.py
llm_eval/llms/: base.py  hugging_face.py  memory.py  message_formatters.py  openai.py  utilities.py
llm_eval/utilities/: internal_utilities.py
llm_evals/: candidates.py  checks.py  eval.py  sandbox.ipynb  tests.py
llm_evals/llms/: base.py  hugging_face.py  memory.py  message_formatters.py  openai.py  utilities.py
llm_evals/utilities/: internal_utilities.py
notebooks/: eval_openai.ipynb  hugging_face_endpoints.ipynb  sandbox.ipynb  sandbox_async.ipynb  sandbox_eval.ipynb  sandbox_llm.ipynb  sandbox_simple.ipynb  temp.py
notebooks/__temp__/: 0E454A44-627C-4B56-915B-8DCFE9DF2A55-8C297EA8-42B9-4237-9571-5C95A042E3BA.yaml
scripts/: dev_requirements.txt  generate_build_files.py  generate_eval_yaml.py  nvidia_datasets_combine.py  nvidia_datasets_download.py  run_requirements.txt
scripts/templates/: environment.yml  meta.yaml  pyproject.toml
src/sik_llm_eval/: anthropic.py  bedrock.py  candidates.py  checks.py  delayed_semaphore.py  eval.py  filtering.py  internal_utilities.py  mistralai.py  openai.py
templates/: eval_result_example.yaml  run_template.yaml
tests/: conftest.py  test_anthropic.py  test_base_llms.py  test_bedrock.py  test_candidates.py  test_checks.py  test_delayed_semaphore.py  test_eval_checks.py  test_eval_tests.py  test_evals.py  test_filtering.py  test_history.py  test_hugging_face.py  test_message_formatters.py  test_mistralai.py  test_mistralai.py.archive  test_openai.py  test_utilities.py  test_workflows.py
tests/eval/: eval_result.txt
tests/fake_data/: fake_eval_8F9FBF37.yaml  fake_eval_no_code_blocks.yaml  fake_eval_non_string_values.yaml  fake_eval_subtract_two_numbers.yaml  fake_eval_sum_two_numbers.yaml  (+7 more)
(+13 files in other folders)
